@@ -14,7 +14,7 @@ module WWW
 
         def initialize(node, select_list)
           @text     = node.inner_text
-          @value    = Mechanize.html_unescape(node['value'])
+          @value    = Mechanize.html_unescape(node['value'] || node.inner_text)
           @selected = node.has_attribute? 'selected'
           @select_list = select_list # The select list this option belongs to
         end
