@@ -12,6 +12,8 @@
 * Duplicating request headers when retrying a 401. Thanks Hiroshi Ichikawa.
 * Simulating an EOF error when a response length is bad.  Thanks Tobias Gruetzmacher.
   http://rubyforge.org/tracker/index.php?func=detail&aid=19178&group_id=1453&atid=5711
+* Defaulting option tags to the inner text.
+  http://rubyforge.org/tracker/index.php?func=detail&aid=19976&group_id=1453&atid=5709
 
 == 0.7.5
 
